--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     background-size: 100%;
     z-index: -1;
 }
+
+.navbar{
+    float: none;
+    z-index: 1;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center ;
+    flex: end;
+}
 .wellcomesec {
     display: flex;
     flex-direction: column;
@@ -26,6 +36,7 @@
 }
 
 .summerybox{
+    line-height: 3em;
     font-family: sans-serif;
     font-size: 30 px;
     padding: 1em;
@@ -33,5 +44,40 @@
     border: solid black;
     border-radius: 1rem;
     flex-basis: 50%;
- 
+
+}
+
+.tablecontent{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between ;
+    font-size: 30px;
+    padding: 1em;
+    margin: 3em;
+}
+
+.southbox{
+    display: flex;
+    border: solid #ccc 1px;
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: rgb(255, 166, 0, 0.5);
+}
+
+.centerbox{
+    display: flex;
+    border: solid #ccc 1px;
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: hsl(240, 100%, 50%, 0.5);
+  
+}
+
+.northbox{
+    display: flex;
+    border: solid #ccc 1px;
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: hsl(0, 0%, 100%, 0.5);
+
 }
