--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 /* style main page */
+html {
+    scroll-behavior: smooth;
+  }
+  
+a[href]{
+    padding: 0.5em;
+    text-decoration: none;
+    color: black;
+  }
+  a[href]:hover{
+      font-size: 30px;
+  }
+
 #mainbody{
     background-image: url(hikingbackground.jpg);
     background-size: 100%;
@@ -6,14 +19,19 @@
 }
 
 .navbar{
-    float: none;
     z-index: 1;
     position: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: center ;
-    flex: end;
+    background-color: hsl(0, 0%, 83%, 0.70);
+    width: 100%;
 }
+
+.navcons{
+    display: inline;
+    padding: 1em;
+}
+
 .wellcomesec {
     display: flex;
     flex-direction: column;
@@ -50,34 +68,114 @@
 .tablecontent{
     display: flex;
     flex-direction: row;
-    justify-content: space-between ;
-    font-size: 30px;
-    padding: 1em;
-    margin: 3em;
+    justify-content: space-between; 
+    font-size: 20px;
+    padding: 0.5em;
+    margin: 1em;
 }
 
+
 .southbox{
-    display: flex;
+    text-align: center;
     border: solid #ccc 1px;
     border-radius: 1rem;
     padding: 1rem;
     background-color: rgb(255, 166, 0, 0.5);
+    flex-basis: 33%;
 }
 
 .centerbox{
-    display: flex;
+    text-align: center;
     border: solid #ccc 1px;
     border-radius: 1rem;
     padding: 1rem;
     background-color: hsl(240, 100%, 50%, 0.5);
-  
+    flex-basis: 33%;
 }
 
 .northbox{
-    display: flex;
+    text-align: center;
     border: solid #ccc 1px;
     border-radius: 1rem;
     padding: 1rem;
     background-color: hsl(0, 0%, 100%, 0.5);
-
+    flex-basis: 33%;
 }
+
+/* south page */
+
+#southpage{
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 25%);    
+    width: 100vw;
+    height: 100vh;
+}
+.wellcomebox{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 100vh;
+    font-size: 40px;
+}
+
+.infoseclinks{
+    display: flex;
+    justify-content: space-around;
+    border: sienna solid 1px;
+    padding: vpw;
+    width: 100%;
+    border-radius: 1rem;
+}
+
+li.infoseclinks{
+    border: blacks solid 1px;
+    margin: 10px;
+    font-size: 20px;
+}
+ .secbox a[href]:hover{
+     font-size: unset;
+ }
+
+ .secbox{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     
+ }
+ 
+.section{
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 25%);    
+    width: 100vw;
+    height: 100vh;
+}
+
+.seclinks{
+    display: flex;
+    flex-wrap:  wrap;
+    justify-content: space-around;
+}
+
+
+.traillabel{
+    display: flex;
+    border: solid black 1px;
+    border-radius: 2em;
+    padding: 2em;
+    margin: 1px;
+}
+
+#imgtrail{width:318px; height: 159px;}
+
+.tipbox{
+    display: flex;
+    border: black solid 1px;
+    border-radius: 10em;
+    justify-content: center;
+    padding: 2em;
+}
+    
+
+
