--- a/style.css
+++ b/style.css
@@ -146,8 +146,6 @@ li.infoseclinks{
  }
  
 .section{
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 25%);    
     width: 100vw;
     height: 100vh;
 }
@@ -177,5 +175,11 @@ li.infoseclinks{
     padding: 2em;
 }
     
+/* centerpage */
 
-
+#centerpage{
+    background: rgb(241,251,254);
+    background: linear-gradient(0deg, rgba(241,251,254,1) 40%, rgba(225,245,253,1) 64%, rgba(197,235,250,1) 100%, rgba(253,255,255,0) 100%);
+    width: 100vw;
+    height: 100vh;
+}
