--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a[href]{
 }
 
 .summerybox{
+    display: flex;
     line-height: 3em;
     font-family: sans-serif;
     font-size: 30 px;
@@ -74,6 +75,9 @@ a[href]{
 
 }
 
+.summerybox ul{
+    flex-direction: column;
+}
 .tablecontent{
     display: flex;
     flex-direction: row;
