orginazing all the jpgs in 1 file

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a[href]{
   }
 
 #mainbody{
-    background-image: url(hikingbackground.jpg);
+    background-image: url(imgs/hikingbackground.jpg);
     background-size: 100%;
     z-index: -1;
 }
